--- a/app/src/main/res/layout/activity_media_player.xml
+++ b/app/src/main/res/layout/activity_media_player.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,9 +9,12 @@
     tools:context=".MediaPlayerActivity">
 
     <androidx.media3.ui.PlayerView
+        android:id="@+id/player_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:id="@+id/player_view"/>
+        android:layout_height="match_parent"
+        app:controller_layout_id="@layout/custom_player_controls"
+        app:use_controller="true"
+        app:resize_mode="fit"
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
