--- a/app/src/main/res/layout/custom_player_controls.xml
+++ b/app/src/main/res/layout/custom_player_controls.xml
@@ -27,12 +27,22 @@
 
         <TextView
             android:id="@+id/titlecard"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:textSize="24dp"
-            android:text="Welcome to "
+            android:textSize="20dp"
+            android:text="JustPlayT"
             android:textColor="@color/white"
             android:textAlignment="center"/>
+
+        <ImageButton
+            android:id="@+id/btn_menu"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="8dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_more_vert"
+            android:contentDescription="More options"
+            android:scaleType="centerInside" />
 
     </LinearLayout>
 
