Implemented both Streaming video online using github gist and also playing videos from device storage. Implemented Zoom in out gestures, Seekbar gesture control horizontal implemented. Beautified the entire app and smoothened few transitions especially the zoom in zoom out feature. Fixed few warning and duplicates of codes. Fixed the skip button as it wasn't updating the title.
Pending Few more advanced features + Network Error handler.

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -24,4 +24,9 @@
         android:textStyle="bold"
         android:textColor="@android:color/black" />
 
+    <ProgressBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"/>
+
 </LinearLayout>
