--- a/app/src/main/res/layout/activity_network_videos.xml
+++ b/app/src/main/res/layout/activity_network_videos.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_200"
-    tools:context=".MainActivity">
+    android:padding="16dp"
+    android:background="@color/teal_200">
 
     <!-- Top Bar -->
     <LinearLayout
@@ -15,8 +14,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:padding="20dp"
-        android:layout_marginTop="24dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -36,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="JustPlayT"
-            android:textSize="30sp"
+            android:textSize="24sp"
             android:textStyle="bold"
             android:textColor="@color/white"
             android:gravity="center" />
@@ -53,22 +50,22 @@
         android:id="@+id/subheading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My Storage Playlist"
-        android:textSize="20sp"
+        android:text="Streaming Online Playlist"
+        android:textSize="16sp"
         android:textColor="@color/white"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/topbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-
+    <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/videoRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:padding="8dp"
+        android:paddingTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/subheading"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
