Implemented Subtitle Support for both My Device and Online Streaming + Network Error handler also implemented -> Tested both scenarios in the case of subtitles.
Pending Audio Track selection.

--- a/app/src/main/res/layout/activity_media_player.xml
+++ b/app/src/main/res/layout/activity_media_player.xml
@@ -15,6 +15,7 @@
         app:controller_layout_id="@layout/custom_player_controls"
         app:use_controller="true"
         app:resize_mode="fit"
+        app:show_subtitle_button="true"
         android:layout_centerInParent="true" />
 
 </RelativeLayout>
